# zero2prod

./: Cargo.toml  Justfile  README.md  configuration.yaml
.github/workflows/: audit.yml  ci.yml
migrations/: 20221022173100_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
